# Asclepius

CAD/Base/: ACPS-A100-001.SLDPRT  ACPS-A100-002.SLDPRT  ACPS-A100-005.SLDPRT  ACPS-A100-006.SLDPRT  ACPS-A100-007.SLDPRT  ACPS-A100-009.SLDPRT  ACPS-A100-010.SLDPRT  ACPS-A100.SLDASM  ACPS-A101.SLDASM
CAD/Drawings/: ACPS-R100.SLDDRW
CAD/Gearbox/: 2664N536_Metal Gear - 20 Degree Pressure Angle.SLDPRT  2664N545_Metal Gear - 20 Degree Pressure Angle.SLDPRT  2696N27_Metal Internal Gear - 20 Degree Pressure Angle.SLDPRT  ACPS-A200.SLDASM
CAD/NEMA/: ACPS-A100-Arm.SLDPRT  ACPS-A100-BottomBeltTensionerLeft.SLDPRT  ACPS-A100-BottomBeltTensionerRight.SLDPRT  ACPS-A100-Instrument.SLDPRT  ACPS-A100-IntuitiveMount.SLDPRT  ACPS-A100-IntuitiveMountTest.SLDPRT  ACPS-A100-MiddleBeltTensioner.SLDPRT  ACPS-A100-MiddleMotorMount.SLDPRT  ACPS-A100-MiddlePlate.SLDPRT  ACPS-A100-MotorMount.SLDPRT  ACPS-A100-Rod.SLDPRT  ACPS-A100-Rod2.SLDPRT  ACPS-A100-Shaft.SLDPRT  ACPS-A100-instrument_adapter.SLDPRT  ACPS-A100-instrument_dock.SLDPRT  ACPS-A1000-Nema.SLDASM  V2 (Stable) - Instrument Dock.sldprt  ~$ACPS-A100-IntuitiveMountTest.SLDPRT
CAD/Recources/: ACPS-G101.SLDPRT  ACPS-G102.SLDPRT  ACPS-NEMA17.SLDPRT  ACPS-NEMA23.SLDASM  ACPS-NEMA23.SLDPRT  ACPS-R101.SLDASM  ACPS-R101.SLDPRT  ACPS-R102-20TPulley.SLDPRT  ACPS-R102.SLDPRT  ACPS-R103-60TPulley.SLDPRT  ACPS-R103.SLDPRT  ISO - Spur gear 1M 25T 20PA 12FW ---S25A75H50L8.0N.SLDPRT  ISO - Spur gear 1M 50T 20PA 12FW ---S50A75H50L8.0N.SLDPRT
CAD/Simple/: ACPS-Link1.SLDPRT  ACPS-S101.SLDPRT  ACPS-S102.SLDPRT  ACPS-S500.SLDASM
CAD/Testing/: ACPS-A100-001.SLDPRT  ACPS-A100-002.SLDPRT  ACPS-A100-003.SLDPRT  ACPS-A100.SLDASM
CAD/acpsold/: CMakeLists.txt
Drawings/: ACPS-S101.SLDDRW
NEMA/ArmPlate/: ACPS-A300-ArmBeltTensioner.SLDPRT  ACPS-A300-ShaftTiltToMan.SLDPRT  ACPS-A300.SLDASM
NEMA/BasePlate/: ACPS-A100-BottomPlate.SLDPRT  ACPS-A100-MotorMount.SLDPRT  ACPS-A100-Shaft.SLDPRT  ACPS-A100-YawBeltTensionerLeft.SLDPRT  ACPS-A100-YawBeltTensionerRight.SLDPRT
NEMA/Manipulator/: ACPS-A500-ForcepsHub.SLDPRT  ACPS-A500-ForcepsLeftFinger.SLDPRT
NEMA/ManipulatorPlate/: ACPS-A400-InstrumentProfileTest.SLDPRT  ACPS-A400-IntuitiveMount.SLDPRT  ACPS-A400-instrument_dock.SLDPRT
NEMA/STL/: ACPS-A100-BottomBeltTensionerLeft.STL  ACPS-A100-BottomPlate.STL  ACPS-A100-Spacer.STL  ACPS-A100-YawBeltTensionerLeft.STL  ACPS-A100-YawBeltTensionerRight.STL  ACPS-A200-TiltBeltTensioner.STL  ACPS-A300-Arm.STL  ACPS-A400-InstrumentProfileTest.STL  ACPS-A400-IntuitiveMount.STL
NEMA/YawPlate/: ACPS-A200-ShaftYawToTilt.SLDPRT  ACPS-A200-TiltBeltTensioner.SLDPRT  ACPS-A200-YawMotorMount.SLDPRT
Recources/: ACPS-R100.SLDASM  ACPS-R102-20TPulley.SLDPRT  ACPS-R103-60TPulley.SLDPRT
Simple/: ACPS-Link2.SLDPRT  ACPS-Link3.SLDPRT  ACPS-Link4.SLDPRT  ACPS-Motor.SLDPRT  ACPS-S102.SLDPRT  ACPS-S103.SLDPRT
Testing/: ACPS-A100-004.SLDPRT  ACPS-A100-008.SLDPRT  ACPS-A100.SLDASM
acps/: CMakeLists.txt  package.xml
dynamixel_arm/: CMakeLists.txt  package.xml
dynamixel_arm/Hardware/include/dynamixel_arm/: ax12a.hpp  control_table.hpp
dynamixel_arm/config/: joint_names_acps.yaml
dynamixel_arm/controllers/: controllers.yaml
dynamixel_arm/env-hooks/: dynamixel_arm.dsv.in
dynamixel_arm/include/dynamixel_arm/: ax_12a.hpp  read_write_node.hpp
dynamixel_arm/launch/: display.launch.py  sim.launch.py
dynamixel_arm/meshes/: link3.STL  link4.STL
dynamixel_arm/scripts/: TransformHelpers.py  basic.py
dynamixel_arm/src/: read_write_node.cpp  transform_node.cpp
dynamixel_arm/urdf/: acps.csv  acps.urdf  acps_bot.ros2_control.xacro  acps_bot.ros2_control_gazebo.xacro  acps_bot.xacro  acps_bot_gazebo.urdf.xacro
(+59 files in other folders)
